--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,17 @@
   
   background-color: #FFB22C;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .first-container h1 {
-  padding-top: 300px;
   color: #FF4C4C;
   font-size: 5rem;
   text-align: center;
+  margin: 0;
   
 }
 
@@ -16,6 +20,7 @@
   color: #FF4C4C;
   font-size: 3rem;
   text-align: center;
+  margin: 0;
   
 
 }
@@ -44,6 +49,14 @@
 
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
 .second-container p {
   color: #000000;
   font-size: 2rem;
@@ -58,7 +71,7 @@
   
 } 
 
-main {
+/* main {
   display: grid;
   grid-template-columns: auto auto auto;
 
@@ -69,7 +82,35 @@ main {
   font-size: 30px;
   text-align: center;
 
+} */
+
+.container {
+  display: grid;
+  grid-template-columns: auto auto;
+  /* background-color: */ 
+  padding: 10px;
 }
+
+.container div {
+  /* background-color:  */
+  border: 2px solid black;
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+
+}
+
+h1 {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  /* transform: translateX(-50%); */
+ /*  z-index: 10; */
+  /* margin: 0; */
+ /*  padding: 10px; */
+  /* background-color: white; /* optional, to make it visible over content */ */
+}
+
 
 
 
