--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 
 .container div {
   /* background-color:  */
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 10px;
   font-size: 30px;
   text-align: center;
